# PracticeWebGPU

./: CMakeLists.txt  README.md  main.cpp  webgpu-utils.cpp  webgpu-utils.h
